[gd_scene load_steps=5 format=3 uid="uid://2u6bgi8pnbpn"]

[ext_resource type="Texture2D" uid="uid://bfva2vg3evite" path="res://assets/objects/chests/chestsAll.png" id="1_i7wge"]
[ext_resource type="Script" path="res://scenes/objects/chest.gd" id="1_w63mx"]
[ext_resource type="PackedScene" uid="uid://bysu47lnoqtca" path="res://scenes/ui/chest.tscn" id="3_0j85h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c8mjs"]
radius = 80.025

[node name="Chest" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_w63mx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c8mjs")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4.28125, 4.0625)
texture = ExtResource("1_i7wge")
hframes = 3
vframes = 4

[node name="Chest" parent="." instance=ExtResource("3_0j85h")]
visible = false
z_index = 0
anchors_preset = 11
anchor_bottom = 1.0
offset_left = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 2
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CollectLabel" type="Label" parent="."]
visible = false
offset_left = -59.0
offset_top = -54.0
offset_right = 63.0
offset_bottom = -39.0
text = "Press \"F\" to open"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
